--- a/MO_Numerical_Experiments/aquisition_functions.ipynb
+++ b/MO_Numerical_Experiments/aquisition_functions.ipynb
@@ -743,6 +743,55 @@
     "filename = 'hypervolume_data.csv'\n",
     "save_stats_to_csv(stats, filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "159999.75"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from botorch.test_functions.multi_objective import DTLZ1\n",
+    "problem = DTLZ1(dim=5)\n",
+    "problem.max_hv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "BayesianOptimization.__init__() got an unexpected keyword argument 'probelm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbotorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtest_functions\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmulti_objective\u001b[39;00m \u001b[39mimport\u001b[39;00m BraninCurrin\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMOBO_SIM\u001b[39;00m \u001b[39mimport\u001b[39;00m BayesianOptimization\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m bo \u001b[39m=\u001b[39m BayesianOptimization(BATCH_SIZE\u001b[39m=\u001b[39;49m \u001b[39m4\u001b[39;49m,N_BATCH\u001b[39m=\u001b[39;49m \u001b[39m10\u001b[39;49m,INITIAL_SAMPLES\u001b[39m=\u001b[39;49m \u001b[39m6\u001b[39;49m, probelm\u001b[39m=\u001b[39;49mBraninCurrin(negate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Run the optimization process\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m random, qparego, qehvi, qnehvi \u001b[39m=\u001b[39m bo\u001b[39m.\u001b[39mrun_optimization()\n",
+      "\u001b[0;31mTypeError\u001b[0m: BayesianOptimization.__init__() got an unexpected keyword argument 'probelm'"
+     ]
+    }
+   ],
+   "source": [
+    "from botorch.test_functions.multi_objective import BraninCurrin\n",
+    "from MOBO_SIM import BayesianOptimization\n",
+    "\n",
+    "bo = BayesianOptimization(BATCH_SIZE= 4,N_BATCH= 10,INITIAL_SAMPLES= 6, probelm=BraninCurrin(negate=True))\n",
+    "\n",
+    "# Run the optimization process\n",
+    "random, qparego, qehvi, qnehvi = bo.run_optimization()"
+   ]
   }
  ],
  "metadata": {
