--- a/MO_Numerical_Experiments/aquisition_functions.ipynb
+++ b/MO_Numerical_Experiments/aquisition_functions.ipynb
@@ -768,9 +768,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "ename": "TypeError",
      "evalue": "BayesianOptimization.__init__() got an unexpected keyword argument 'probelm'",
@@ -778,7 +786,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbotorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtest_functions\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmulti_objective\u001b[39;00m \u001b[39mimport\u001b[39;00m BraninCurrin\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMOBO_SIM\u001b[39;00m \u001b[39mimport\u001b[39;00m BayesianOptimization\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m bo \u001b[39m=\u001b[39m BayesianOptimization(BATCH_SIZE\u001b[39m=\u001b[39;49m \u001b[39m4\u001b[39;49m,N_BATCH\u001b[39m=\u001b[39;49m \u001b[39m10\u001b[39;49m,INITIAL_SAMPLES\u001b[39m=\u001b[39;49m \u001b[39m6\u001b[39;49m, probelm\u001b[39m=\u001b[39;49mBraninCurrin(negate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Run the optimization process\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m random, qparego, qehvi, qnehvi \u001b[39m=\u001b[39m bo\u001b[39m.\u001b[39mrun_optimization()\n",
+      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbotorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtest_functions\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmulti_objective\u001b[39;00m \u001b[39mimport\u001b[39;00m BraninCurrin\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMOBO_SIM\u001b[39;00m \u001b[39mimport\u001b[39;00m BayesianOptimization\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m bo \u001b[39m=\u001b[39m BayesianOptimization(BATCH_SIZE\u001b[39m=\u001b[39;49m \u001b[39m4\u001b[39;49m,N_BATCH\u001b[39m=\u001b[39;49m \u001b[39m10\u001b[39;49m,INITIAL_SAMPLES\u001b[39m=\u001b[39;49m \u001b[39m6\u001b[39;49m, probelm\u001b[39m=\u001b[39;49mBraninCurrin(negate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Run the optimization process\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/MO_Numerical_Experiments/aquisition_functions.ipynb#X15sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m random, qparego, qehvi, qnehvi \u001b[39m=\u001b[39m bo\u001b[39m.\u001b[39mrun_optimization()\n",
       "\u001b[0;31mTypeError\u001b[0m: BayesianOptimization.__init__() got an unexpected keyword argument 'probelm'"
      ]
     }
