--- a/SO_Numerical_Experiments/bootstrapping.ipynb
+++ b/SO_Numerical_Experiments/bootstrapping.ipynb
@@ -2,27 +2,247 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "BayesianOptimization.__init__() got an unexpected keyword argument 'bound'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m DIM \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Bounds are 10 for Levy and 32 for Ackley \u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m optimizer \u001b[39m=\u001b[39m BayesianOptimization(fun\u001b[39m=\u001b[39;49mAckley(dim\u001b[39m=\u001b[39;49mDIM, negate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m                                  batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m                                  dim\u001b[39m=\u001b[39;49mDIM,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m                                  epochs\u001b[39m=\u001b[39;49mEPOCHS,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m                                  n_init\u001b[39m=\u001b[39;49mN_INITIAL,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m                                  bound\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m                                  acqf_type\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mqEI\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m x_max, y_max \u001b[39m=\u001b[39m optimizer\u001b[39m.\u001b[39mrun()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W1sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m data \u001b[39m=\u001b[39m optimizer\u001b[39m.\u001b[39mget_data()\n",
-      "\u001b[0;31mTypeError\u001b[0m: BayesianOptimization.__init__() got an unexpected keyword argument 'bound'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Batch</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>x3</th>\n",
+       "      <th>x4</th>\n",
+       "      <th>x5</th>\n",
+       "      <th>x6</th>\n",
+       "      <th>x7</th>\n",
+       "      <th>x8</th>\n",
+       "      <th>x9</th>\n",
+       "      <th>x10</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.268344</td>\n",
+       "      <td>-24.630157</td>\n",
+       "      <td>-24.197015</td>\n",
+       "      <td>-9.895261</td>\n",
+       "      <td>-18.438448</td>\n",
+       "      <td>3.098315</td>\n",
+       "      <td>-4.773726</td>\n",
+       "      <td>27.769696</td>\n",
+       "      <td>8.628926</td>\n",
+       "      <td>-4.579019</td>\n",
+       "      <td>-20.991023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.050301</td>\n",
+       "      <td>11.118967</td>\n",
+       "      <td>16.558254</td>\n",
+       "      <td>23.985074</td>\n",
+       "      <td>0.761052</td>\n",
+       "      <td>-20.643286</td>\n",
+       "      <td>25.763249</td>\n",
+       "      <td>-29.443123</td>\n",
+       "      <td>-19.246696</td>\n",
+       "      <td>26.092024</td>\n",
+       "      <td>-21.243080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.271793</td>\n",
+       "      <td>-8.915932</td>\n",
+       "      <td>-5.679147</td>\n",
+       "      <td>-28.166922</td>\n",
+       "      <td>19.969438</td>\n",
+       "      <td>-0.032730</td>\n",
+       "      <td>-30.915526</td>\n",
+       "      <td>-0.165285</td>\n",
+       "      <td>-14.733306</td>\n",
+       "      <td>10.061175</td>\n",
+       "      <td>-20.617730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.763086</td>\n",
+       "      <td>27.831074</td>\n",
+       "      <td>13.836867</td>\n",
+       "      <td>2.068094</td>\n",
+       "      <td>-1.302439</td>\n",
+       "      <td>23.736404</td>\n",
+       "      <td>3.641597</td>\n",
+       "      <td>7.022896</td>\n",
+       "      <td>21.208903</td>\n",
+       "      <td>-23.626410</td>\n",
+       "      <td>-20.943148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-25.446474</td>\n",
+       "      <td>-6.089227</td>\n",
+       "      <td>30.476108</td>\n",
+       "      <td>12.502565</td>\n",
+       "      <td>-14.907971</td>\n",
+       "      <td>10.281443</td>\n",
+       "      <td>-21.592235</td>\n",
+       "      <td>-12.709945</td>\n",
+       "      <td>-7.720115</td>\n",
+       "      <td>18.108712</td>\n",
+       "      <td>-21.307879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>-16.379544</td>\n",
+       "      <td>10.095375</td>\n",
+       "      <td>23.928198</td>\n",
+       "      <td>-28.105722</td>\n",
+       "      <td>25.956668</td>\n",
+       "      <td>29.291693</td>\n",
+       "      <td>-19.320117</td>\n",
+       "      <td>-16.280629</td>\n",
+       "      <td>-21.818231</td>\n",
+       "      <td>18.779103</td>\n",
+       "      <td>-21.180056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.034289</td>\n",
+       "      <td>0.868871</td>\n",
+       "      <td>-0.039757</td>\n",
+       "      <td>1.500435</td>\n",
+       "      <td>-7.930238</td>\n",
+       "      <td>-3.852081</td>\n",
+       "      <td>0.265403</td>\n",
+       "      <td>-1.015344</td>\n",
+       "      <td>3.685729</td>\n",
+       "      <td>-5.496303</td>\n",
+       "      <td>-11.602571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.634781</td>\n",
+       "      <td>29.202910</td>\n",
+       "      <td>-11.556451</td>\n",
+       "      <td>-5.025766</td>\n",
+       "      <td>2.501414</td>\n",
+       "      <td>-13.996777</td>\n",
+       "      <td>-26.765416</td>\n",
+       "      <td>1.962671</td>\n",
+       "      <td>-1.945030</td>\n",
+       "      <td>-21.288447</td>\n",
+       "      <td>-20.688009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>20.935442</td>\n",
+       "      <td>-18.630749</td>\n",
+       "      <td>-31.235498</td>\n",
+       "      <td>-23.810601</td>\n",
+       "      <td>11.476616</td>\n",
+       "      <td>10.227921</td>\n",
+       "      <td>23.056145</td>\n",
+       "      <td>3.032141</td>\n",
+       "      <td>-13.426515</td>\n",
+       "      <td>-1.248540</td>\n",
+       "      <td>-21.093680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>-20.345010</td>\n",
+       "      <td>-20.055434</td>\n",
+       "      <td>-21.432832</td>\n",
+       "      <td>-10.145504</td>\n",
+       "      <td>-28.929747</td>\n",
+       "      <td>-4.198867</td>\n",
+       "      <td>-31.361647</td>\n",
+       "      <td>30.984522</td>\n",
+       "      <td>20.018368</td>\n",
+       "      <td>4.401370</td>\n",
+       "      <td>-21.243403</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Batch         x1         x2         x3         x4         x5         x6  \\\n",
+       "0      0.0  -1.268344 -24.630157 -24.197015  -9.895261 -18.438448   3.098315   \n",
+       "1      0.0  11.050301  11.118967  16.558254  23.985074   0.761052 -20.643286   \n",
+       "2      0.0  31.271793  -8.915932  -5.679147 -28.166922  19.969438  -0.032730   \n",
+       "3      0.0 -20.763086  27.831074  13.836867   2.068094  -1.302439  23.736404   \n",
+       "4      0.0 -25.446474  -6.089227  30.476108  12.502565 -14.907971  10.281443   \n",
+       "..     ...        ...        ...        ...        ...        ...        ...   \n",
+       "195   10.0 -16.379544  10.095375  23.928198 -28.105722  25.956668  29.291693   \n",
+       "196   10.0   1.034289   0.868871  -0.039757   1.500435  -7.930238  -3.852081   \n",
+       "197   10.0   7.634781  29.202910 -11.556451  -5.025766   2.501414 -13.996777   \n",
+       "198   10.0  20.935442 -18.630749 -31.235498 -23.810601  11.476616  10.227921   \n",
+       "199   10.0 -20.345010 -20.055434 -21.432832 -10.145504 -28.929747  -4.198867   \n",
+       "\n",
+       "            x7         x8         x9        x10          y  \n",
+       "0    -4.773726  27.769696   8.628926  -4.579019 -20.991023  \n",
+       "1    25.763249 -29.443123 -19.246696  26.092024 -21.243080  \n",
+       "2   -30.915526  -0.165285 -14.733306  10.061175 -20.617730  \n",
+       "3     3.641597   7.022896  21.208903 -23.626410 -20.943148  \n",
+       "4   -21.592235 -12.709945  -7.720115  18.108712 -21.307879  \n",
+       "..         ...        ...        ...        ...        ...  \n",
+       "195 -19.320117 -16.280629 -21.818231  18.779103 -21.180056  \n",
+       "196   0.265403  -1.015344   3.685729  -5.496303 -11.602571  \n",
+       "197 -26.765416   1.962671  -1.945030 -21.288447 -20.688009  \n",
+       "198  23.056145   3.032141 -13.426515  -1.248540 -21.093680  \n",
+       "199 -31.361647  30.984522  20.018368   4.401370 -21.243403  \n",
+       "\n",
+       "[200 rows x 12 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -35,7 +255,7 @@
     "N_INITIAL = 100\n",
     "EPOCHS = 10\n",
     "BATCH_SIZE = 10\n",
-    "DIM = 5\n",
+    "DIM = 10\n",
     "# Bounds are 10 for Levy and 32 for Ackley \n",
     "\n",
     "optimizer = BayesianOptimization(fun=Ackley(dim=DIM, negate=True), \n",
@@ -52,6 +272,106 @@
     "data = optimizer.get_data()\n",
     "full = optimizer.format(data, dim=DIM, n_init=N_INITIAL, batch_size=BATCH_SIZE, epochs=EPOCHS)\n",
     "display(full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            y\n",
+      "0  -20.991023\n",
+      "1  -21.243080\n",
+      "2  -20.617730\n",
+      "3  -20.943148\n",
+      "4  -21.307879\n",
+      "..        ...\n",
+      "95 -21.423673\n",
+      "96 -21.129790\n",
+      "97 -21.140323\n",
+      "98 -20.986738\n",
+      "99 -21.172051\n",
+      "\n",
+      "[100 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "cols = ['Batch','y']\n",
+    "df = full[cols]\n",
+    "\n",
+    "\n",
+    "y_0 = df[df['Batch'] == 0.0][['y']]\n",
+    "\n",
+    "# Reset the index (optional, to get a clean index starting from 0)\n",
+    "# y_0 = y_0.reset_index(drop=True)\n",
+    "\n",
+    "print(y_0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100,) [14.00302964 13.33234702  8.83697698 14.83799489 10.61643466 12.95624483\n",
+      " 11.32477743 13.34966646  7.63591721 13.23926794  8.14818748 11.97457334\n",
+      " 11.86943172 10.74621642  9.01436598  4.42570815 14.77242682  0.37546632\n",
+      " 12.88741441 21.13040823 16.92857936 14.98388762 21.65543913 13.81506922\n",
+      " 14.10757865 12.52171427  2.18380401  0.21567805 15.26731805 21.52886234\n",
+      " 10.17045288 14.28136188  7.41187752  9.88449633  9.87892256  5.07737545\n",
+      " 18.68464756 17.70974916 12.66915657 13.43160797  3.15234204 13.93332753\n",
+      "  7.48463858  9.27536004 14.69511839 14.60888822 12.04451313 11.88683888\n",
+      "  7.13955616 14.72053995 13.19677404 10.377187   12.98737196  8.51205275\n",
+      " 18.465986    6.10944008 14.71901799 17.41201261 12.75917887  7.80547452\n",
+      " 14.02244076  9.56718169 11.9909538   7.18942011  0.55233943  6.2818943\n",
+      " 15.99019026 19.47860382 18.54226498 23.89401077  9.25289047  9.40407493\n",
+      " 14.73677027 20.17710613 19.1363449  12.77934344 13.86493255  1.49414113\n",
+      " 14.24837411  9.16091274  0.42758215 12.38396243 10.66478495 16.15230449\n",
+      "  2.53537025 12.30757253  9.75661271 18.38806377 14.10765208  6.90364549\n",
+      " 13.87485611  7.4103491   7.92147688  6.72732873  4.84836954  9.80570358\n",
+      "  8.74708102 12.12379657 14.13448076 11.56272538]\n",
+      "Bootstrap Observed difference of maxima: -0.2826524936954016\n",
+      "Bootstrap 95% Confidence interval: [-4.593453741712974, 2.4809500456010944]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def bootstrap_diff_max(X, Y, n_bootstrap=10000):\n",
+    "    np.random.seed(0)\n",
+    "    max_diffs = []\n",
+    "    for _ in range(n_bootstrap):\n",
+    "        X_resample = np.random.choice(X, size=len(X), replace=True)\n",
+    "        Y_resample = np.random.choice(Y, size=len(Y), replace=True)\n",
+    "        max_diff = np.max(X_resample) - np.max(Y_resample)\n",
+    "        max_diffs.append(max_diff)\n",
+    "    return np.array(max_diffs)\n",
+    "\n",
+    "# Sample data\n",
+    "X = np.random.normal(10, 5, 100)  # Replace with your data\n",
+    "Y = np.random.normal(12, 5, 100)  # Replace with your data\n",
+    "print(X.shape,Y)\n",
+    "# Bootstrap method\n",
+    "max_diffs_bootstrap = bootstrap_diff_max(X, Y)\n",
+    "obs_diff = np.max(X) - np.max(Y)\n",
+    "\n",
+    "# Confidence interval\n",
+    "lower_bound_bootstrap = np.percentile(max_diffs_bootstrap, 2.5)\n",
+    "upper_bound_bootstrap = np.percentile(max_diffs_bootstrap, 97.5)\n",
+    "\n",
+    "print(f\"Bootstrap Observed difference of maxima: {obs_diff}\")\n",
+    "print(f\"Bootstrap 95% Confidence interval: [{lower_bound_bootstrap}, {upper_bound_bootstrap}]\")"
    ]
   }
  ],
