--- a/SO_Numerical_Experiments/bootstrapping.ipynb
+++ b/SO_Numerical_Experiments/bootstrapping.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -134,77 +142,77 @@
        "    <tr>\n",
        "      <th>195</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>-16.379544</td>\n",
-       "      <td>10.095375</td>\n",
-       "      <td>23.928198</td>\n",
-       "      <td>-28.105722</td>\n",
-       "      <td>25.956668</td>\n",
-       "      <td>29.291693</td>\n",
-       "      <td>-19.320117</td>\n",
-       "      <td>-16.280629</td>\n",
-       "      <td>-21.818231</td>\n",
-       "      <td>18.779103</td>\n",
-       "      <td>-21.180056</td>\n",
+       "      <td>6.276859</td>\n",
+       "      <td>-19.517810</td>\n",
+       "      <td>9.165833</td>\n",
+       "      <td>32.096925</td>\n",
+       "      <td>2.817504</td>\n",
+       "      <td>-5.817941</td>\n",
+       "      <td>0.979476</td>\n",
+       "      <td>-31.901072</td>\n",
+       "      <td>12.284349</td>\n",
+       "      <td>19.388695</td>\n",
+       "      <td>-20.935490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>1.034289</td>\n",
-       "      <td>0.868871</td>\n",
-       "      <td>-0.039757</td>\n",
-       "      <td>1.500435</td>\n",
-       "      <td>-7.930238</td>\n",
-       "      <td>-3.852081</td>\n",
-       "      <td>0.265403</td>\n",
-       "      <td>-1.015344</td>\n",
-       "      <td>3.685729</td>\n",
-       "      <td>-5.496303</td>\n",
-       "      <td>-11.602571</td>\n",
+       "      <td>-5.793735</td>\n",
+       "      <td>-8.487261</td>\n",
+       "      <td>20.861256</td>\n",
+       "      <td>25.601760</td>\n",
+       "      <td>-15.550696</td>\n",
+       "      <td>9.987418</td>\n",
+       "      <td>4.145270</td>\n",
+       "      <td>-14.100150</td>\n",
+       "      <td>11.849820</td>\n",
+       "      <td>-11.055327</td>\n",
+       "      <td>-20.314919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>7.634781</td>\n",
-       "      <td>29.202910</td>\n",
-       "      <td>-11.556451</td>\n",
-       "      <td>-5.025766</td>\n",
-       "      <td>2.501414</td>\n",
-       "      <td>-13.996777</td>\n",
-       "      <td>-26.765416</td>\n",
-       "      <td>1.962671</td>\n",
-       "      <td>-1.945030</td>\n",
-       "      <td>-21.288447</td>\n",
-       "      <td>-20.688009</td>\n",
+       "      <td>0.470168</td>\n",
+       "      <td>-5.865362</td>\n",
+       "      <td>3.699474</td>\n",
+       "      <td>7.934607</td>\n",
+       "      <td>0.391342</td>\n",
+       "      <td>-6.489089</td>\n",
+       "      <td>-2.900866</td>\n",
+       "      <td>-8.615958</td>\n",
+       "      <td>5.333767</td>\n",
+       "      <td>-4.688156</td>\n",
+       "      <td>-15.068747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>20.935442</td>\n",
-       "      <td>-18.630749</td>\n",
-       "      <td>-31.235498</td>\n",
-       "      <td>-23.810601</td>\n",
-       "      <td>11.476616</td>\n",
-       "      <td>10.227921</td>\n",
-       "      <td>23.056145</td>\n",
-       "      <td>3.032141</td>\n",
-       "      <td>-13.426515</td>\n",
-       "      <td>-1.248540</td>\n",
-       "      <td>-21.093680</td>\n",
+       "      <td>2.417947</td>\n",
+       "      <td>-13.697862</td>\n",
+       "      <td>-5.660556</td>\n",
+       "      <td>27.756570</td>\n",
+       "      <td>8.384915</td>\n",
+       "      <td>-13.542080</td>\n",
+       "      <td>-31.584724</td>\n",
+       "      <td>20.062906</td>\n",
+       "      <td>18.282627</td>\n",
+       "      <td>16.378456</td>\n",
+       "      <td>-21.522593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>10.0</td>\n",
-       "      <td>-20.345010</td>\n",
-       "      <td>-20.055434</td>\n",
-       "      <td>-21.432832</td>\n",
-       "      <td>-10.145504</td>\n",
-       "      <td>-28.929747</td>\n",
-       "      <td>-4.198867</td>\n",
-       "      <td>-31.361647</td>\n",
-       "      <td>30.984522</td>\n",
-       "      <td>20.018368</td>\n",
-       "      <td>4.401370</td>\n",
-       "      <td>-21.243403</td>\n",
+       "      <td>0.343545</td>\n",
+       "      <td>-27.967158</td>\n",
+       "      <td>-26.433130</td>\n",
+       "      <td>-21.430113</td>\n",
+       "      <td>-9.306204</td>\n",
+       "      <td>-21.458356</td>\n",
+       "      <td>-18.105788</td>\n",
+       "      <td>30.696079</td>\n",
+       "      <td>-27.652289</td>\n",
+       "      <td>-15.410966</td>\n",
+       "      <td>-21.771055</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -219,11 +227,11 @@
        "3      0.0 -20.763086  27.831074  13.836867   2.068094  -1.302439  23.736404   \n",
        "4      0.0 -25.446474  -6.089227  30.476108  12.502565 -14.907971  10.281443   \n",
        "..     ...        ...        ...        ...        ...        ...        ...   \n",
-       "195   10.0 -16.379544  10.095375  23.928198 -28.105722  25.956668  29.291693   \n",
-       "196   10.0   1.034289   0.868871  -0.039757   1.500435  -7.930238  -3.852081   \n",
-       "197   10.0   7.634781  29.202910 -11.556451  -5.025766   2.501414 -13.996777   \n",
-       "198   10.0  20.935442 -18.630749 -31.235498 -23.810601  11.476616  10.227921   \n",
-       "199   10.0 -20.345010 -20.055434 -21.432832 -10.145504 -28.929747  -4.198867   \n",
+       "195   10.0   6.276859 -19.517810   9.165833  32.096925   2.817504  -5.817941   \n",
+       "196   10.0  -5.793735  -8.487261  20.861256  25.601760 -15.550696   9.987418   \n",
+       "197   10.0   0.470168  -5.865362   3.699474   7.934607   0.391342  -6.489089   \n",
+       "198   10.0   2.417947 -13.697862  -5.660556  27.756570   8.384915 -13.542080   \n",
+       "199   10.0   0.343545 -27.967158 -26.433130 -21.430113  -9.306204 -21.458356   \n",
        "\n",
        "            x7         x8         x9        x10          y  \n",
        "0    -4.773726  27.769696   8.628926  -4.579019 -20.991023  \n",
@@ -232,11 +240,11 @@
        "3     3.641597   7.022896  21.208903 -23.626410 -20.943148  \n",
        "4   -21.592235 -12.709945  -7.720115  18.108712 -21.307879  \n",
        "..         ...        ...        ...        ...        ...  \n",
-       "195 -19.320117 -16.280629 -21.818231  18.779103 -21.180056  \n",
-       "196   0.265403  -1.015344   3.685729  -5.496303 -11.602571  \n",
-       "197 -26.765416   1.962671  -1.945030 -21.288447 -20.688009  \n",
-       "198  23.056145   3.032141 -13.426515  -1.248540 -21.093680  \n",
-       "199 -31.361647  30.984522  20.018368   4.401370 -21.243403  \n",
+       "195   0.979476 -31.901072  12.284349  19.388695 -20.935490  \n",
+       "196   4.145270 -14.100150  11.849820 -11.055327 -20.314919  \n",
+       "197  -2.900866  -8.615958   5.333767  -4.688156 -15.068747  \n",
+       "198 -31.584724  20.062906  18.282627  16.378456 -21.522593  \n",
+       "199 -18.105788  30.696079 -27.652289 -15.410966 -21.771055  \n",
        "\n",
        "[200 rows x 12 columns]"
       ]
@@ -276,30 +284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            y\n",
-      "0  -20.991023\n",
-      "1  -21.243080\n",
-      "2  -20.617730\n",
-      "3  -20.943148\n",
-      "4  -21.307879\n",
-      "..        ...\n",
-      "95 -21.423673\n",
-      "96 -21.129790\n",
-      "97 -21.140323\n",
-      "98 -20.986738\n",
-      "99 -21.172051\n",
-      "\n",
-      "[100 rows x 1 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "cols = ['Batch','y']\n",
@@ -307,41 +294,31 @@
     "\n",
     "\n",
     "y_0 = df[df['Batch'] == 0.0][['y']]\n",
+    "y_1 = df[df['Batch'] == 1.0][['y']]\n",
     "\n",
-    "# Reset the index (optional, to get a clean index starting from 0)\n",
-    "# y_0 = y_0.reset_index(drop=True)\n",
     "\n",
-    "print(y_0)\n"
+    "def get_batches(id1,id2):\n",
+    "    y_0 = df[df['Batch'] == id1][['y']]\n",
+    "    y_1 = df[df['Batch'] == id2][['y']]\n",
+    "    return y_0, y_1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100,) [14.00302964 13.33234702  8.83697698 14.83799489 10.61643466 12.95624483\n",
-      " 11.32477743 13.34966646  7.63591721 13.23926794  8.14818748 11.97457334\n",
-      " 11.86943172 10.74621642  9.01436598  4.42570815 14.77242682  0.37546632\n",
-      " 12.88741441 21.13040823 16.92857936 14.98388762 21.65543913 13.81506922\n",
-      " 14.10757865 12.52171427  2.18380401  0.21567805 15.26731805 21.52886234\n",
-      " 10.17045288 14.28136188  7.41187752  9.88449633  9.87892256  5.07737545\n",
-      " 18.68464756 17.70974916 12.66915657 13.43160797  3.15234204 13.93332753\n",
-      "  7.48463858  9.27536004 14.69511839 14.60888822 12.04451313 11.88683888\n",
-      "  7.13955616 14.72053995 13.19677404 10.377187   12.98737196  8.51205275\n",
-      " 18.465986    6.10944008 14.71901799 17.41201261 12.75917887  7.80547452\n",
-      " 14.02244076  9.56718169 11.9909538   7.18942011  0.55233943  6.2818943\n",
-      " 15.99019026 19.47860382 18.54226498 23.89401077  9.25289047  9.40407493\n",
-      " 14.73677027 20.17710613 19.1363449  12.77934344 13.86493255  1.49414113\n",
-      " 14.24837411  9.16091274  0.42758215 12.38396243 10.66478495 16.15230449\n",
-      "  2.53537025 12.30757253  9.75661271 18.38806377 14.10765208  6.90364549\n",
-      " 13.87485611  7.4103491   7.92147688  6.72732873  4.84836954  9.80570358\n",
-      "  8.74708102 12.12379657 14.13448076 11.56272538]\n",
-      "Bootstrap Observed difference of maxima: -0.2826524936954016\n",
-      "Bootstrap 95% Confidence interval: [-4.593453741712974, 2.4809500456010944]\n"
+     "ename": "ValueError",
+     "evalue": "a must be 1-dimensional",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray(max_diffs)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Bootstrap method\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m max_diffs_bootstrap \u001b[39m=\u001b[39m bootstrap_diff_max(y_0, y_1)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m obs_diff \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmax(y_0) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39mmax(y_1)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Confidence interval\u001b[39;00m\n",
+      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb Cell 3\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m max_diffs \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_bootstrap):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     X_resample \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice(X, size\u001b[39m=\u001b[39;49m\u001b[39mlen\u001b[39;49m(X), replace\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     Y_resample \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(Y, size\u001b[39m=\u001b[39m\u001b[39mlen\u001b[39m(Y), replace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/bootstrapping.ipynb#W2sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     max_diff \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmax(X_resample) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39mmax(Y_resample)\n",
+      "File \u001b[0;32mnumpy/random/mtrand.pyx:947\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: a must be 1-dimensional"
      ]
     }
    ],
@@ -358,13 +335,9 @@
     "        max_diffs.append(max_diff)\n",
     "    return np.array(max_diffs)\n",
     "\n",
-    "# Sample data\n",
-    "X = np.random.normal(10, 5, 100)  # Replace with your data\n",
-    "Y = np.random.normal(12, 5, 100)  # Replace with your data\n",
-    "print(X.shape,Y)\n",
     "# Bootstrap method\n",
-    "max_diffs_bootstrap = bootstrap_diff_max(X, Y)\n",
-    "obs_diff = np.max(X) - np.max(Y)\n",
+    "max_diffs_bootstrap = bootstrap_diff_max(y_0, y_1)\n",
+    "obs_diff = np.max(y_0) - np.max(y_1)\n",
     "\n",
     "# Confidence interval\n",
     "lower_bound_bootstrap = np.percentile(max_diffs_bootstrap, 2.5)\n",
@@ -372,6 +345,45 @@
     "\n",
     "print(f\"Bootstrap Observed difference of maxima: {obs_diff}\")\n",
     "print(f\"Bootstrap 95% Confidence interval: [{lower_bound_bootstrap}, {upper_bound_bootstrap}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Permutation Observed difference of maxima: -0.5953076628331537\n",
+      "Permutation p-value: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def permutation_test_max(X, Y, n_permutations=10000):\n",
+    "    np.random.seed(0)\n",
+    "    combined = np.concatenate([X, Y])\n",
+    "    n_X = len(X)\n",
+    "    obs_diff = np.max(X) - np.max(Y)\n",
+    "    \n",
+    "    perm_diffs = []\n",
+    "    for _ in range(n_permutations):\n",
+    "        np.random.shuffle(combined)\n",
+    "        X_permuted = combined[:n_X]\n",
+    "        Y_permuted = combined[n_X:]\n",
+    "        max_diff = np.max(X_permuted) - np.max(Y_permuted)\n",
+    "        perm_diffs.append(max_diff)\n",
+    "        \n",
+    "    p_value = np.mean(np.abs(perm_diffs) >= np.abs(obs_diff))\n",
+    "    return np.array(perm_diffs), obs_diff, p_value\n",
+    "\n",
+    "# Permutation test\n",
+    "perm_diffs, obs_diff_perm, p_value = permutation_test_max(X, Y)\n",
+    "\n",
+    "print(f\"Permutation Observed difference of maxima: {obs_diff_perm}\")\n",
+    "print(f\"Permutation p-value: {p_value}\")\n"
    ]
   }
  ],
