--- a/SO_Numerical_Experiments/permutation.ipynb
+++ b/SO_Numerical_Experiments/permutation.ipynb
@@ -1149,31 +1149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/threadpoolctl.py:1214: RuntimeWarning: \n",
-      "Found Intel OpenMP ('libiomp') and LLVM OpenMP ('libomp') loaded at\n",
-      "the same time. Both libraries are known to be incompatible and this\n",
-      "can cause random crashes or deadlocks on Linux when loaded in the\n",
-      "same Python program.\n",
-      "Using threadpoolctl may cause crashes or deadlocks. For more\n",
-      "information and possible workarounds, please see\n",
-      "    https://github.com/joblib/threadpoolctl/blob/master/multiple_openmp.md\n",
-      "\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Permutation Observed difference of maxima (normalized): 0.7591962385029073\n",
-      "Permutation p-value (normalized): 0.4748\n"
+      "Permutation Observed difference of maxima (normalized): -57081.13794044327\n",
+      "Permutation p-value (normalized): 0.0033\n"
      ]
     }
    ],
@@ -1205,7 +1189,7 @@
     "Y_normalized = scaler.fit_transform(Y.reshape(-1, 1)).flatten()\n",
     "\n",
     "# Permutation test\n",
-    "perm_diffs, obs_diff_perm, p_value = permutation_test_max(X_normalized, Y_normalized)\n",
+    "perm_diffs, obs_diff_perm, p_value = permutation_test_max(X, Y)\n",
     "\n",
     "print(f\"Permutation Observed difference of maxima (normalized): {obs_diff_perm}\")\n",
     "print(f\"Permutation p-value (normalized): {p_value}\")"
