--- a/SO_Numerical_Experiments/GP_plots.ipynb
+++ b/SO_Numerical_Experiments/GP_plots.ipynb
@@ -5,7 +5,99 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bayesian_optimization import BayesianOptimization\n",
+    "import pandas as pd \n",
+    "from botorch.test_functions import Ackley\n",
+    "from botorch.test_functions import Levy \n",
+    "from botorch.test_functions import Beale\n",
+    "from botorch.test_functions import DixonPrice\n",
+    "from botorch.test_functions import DropWave\n",
+    "from botorch.test_functions import Hartmann\n",
+    "from botorch.test_functions import StyblinskiTang\n",
+    "# Variables that determine the size of the dataset\n",
+    "N_INITIAL = 10\n",
+    "EPOCHS = 3\n",
+    "BATCH_SIZE = 10\n",
+    "DIM = 2\n",
+    "LOWER = -32.768\n",
+    "UPPER = 32.768\n",
+    "\n",
+    "optimizer = BayesianOptimization(fun=Ackley(dim=DIM,negate=True), \n",
+    "                                 batch_size=BATCH_SIZE, \n",
+    "                                 dim=DIM, \n",
+    "                                 epochs=EPOCHS, \n",
+    "                                 n_init=N_INITIAL, \n",
+    "                                 lower_bound=LOWER,\n",
+    "                                 upper_bound=UPPER,\n",
+    "                                 seed=5,\n",
+    "                                 acqf_type='qUCB')\n",
+    "\n",
+    "x_max, y_max = optimizer.run()\n",
+    "data = optimizer.get_data()\n",
+    "full = optimizer.format(data, dim=DIM, n_init=N_INITIAL, batch_size=BATCH_SIZE, epochs=EPOCHS)\n",
+    "display(full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch \n",
+    "import botorch as bo\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "X_cols = [\n",
+    "    'D(+)-Biotin',\n",
+    "    'D-Pantothenic acid calcium salt',\n",
+    "    'Folic acid',\n",
+    "    'myo-Inositol',\n",
+    "    'Thiaminhydrochloride',\n",
+    "    'Pyridoxinhydrochloride',\n",
+    "    'Niacin',\n",
+    "    '4-Aminobenzoic acid',\n",
+    "    'Riboflavin',\n",
+    "    'Cobalamin',\n",
+    "    'Boric acid',\n",
+    "    'Potassium iodide',\n",
+    "    'Iron(III) chloride',\n",
+    "    'Iron(II) sulfate heptahydrate',\n",
+    "    'Manganese(II) sulfate monohydrate',\n",
+    "    'Manganese(II) chloride tetrahydrate',\n",
+    "    'Sodium molybdat dihydrate',\n",
+    "    'Copper(II) sulfate pentahydrate',\n",
+    "    'Zinc sulfate heptahydrate',\n",
+    "    'Cobalt(II) chloride hexahydrate',\n",
+    "]\n",
+    "Y1_cols = ['Growth (OD)']\n",
+    "Y2_cols = ['Lipid content (FL)']\n",
+    "\n",
+    "X = bo_data[X_cols]\n",
+    "y1 = bo_data[Y1_cols]\n",
+    "y2 = bo_data[Y2_cols]\n",
+    "X = torch.tensor(X.values, dtype=torch.double)\n",
+    "y1 = torch.tensor(y1.values, dtype=torch.double)\n",
+    "y2 = torch.tensor(y2.values, dtype=torch.double)\n",
+    "\n",
+    "# Remove the first 20 rows\n",
+    "X = X[20:]\n",
+    "y1 = y1[20:]\n",
+    "y2 = y2[20:]\n",
+    "\n",
+    "X_min, X_max = X.min(dim=0).values, X.max(dim=0).values # to [0,1]\n",
+    "X_normed = (X - X_min) / (X_max - X_min)\n",
+    "\n",
+    "Y1_normed = (y1 - y1.mean()) / y1.std() # Norm to (0,1)\n",
+    "Y2_normed = (y2 - y2.mean()) / y2.std() # Norm to (0,1)\n",
+    "\n",
+    "print(X.shape)\n",
+    "print(y1.shape)\n",
+    "gp1 = bo.models.SingleTaskGP(X_normed, Y1_normed) # Train the model Y1\n",
+    "gp2 = bo.models.SingleTaskGP(X_normed, Y2_normed) # Train the model Y2"
+   ]
   }
  ],
  "metadata": {
