--- a/SO_Numerical_Experiments/GP_plots.ipynb
+++ b/SO_Numerical_Experiments/GP_plots.ipynb
@@ -362,7 +362,7 @@
     "    mean_grid = predictions_grid.mean.detach().numpy()\n",
     "\n",
     "# Rescale mean_grid back to the original scale\n",
-    "mean_grid_rescaled = denormalize(mean_grid, mean_y1, std_y1)  # Replace mean_y1 and std_y1 with your actual normalization values\n",
+    "mean_grid_rescaled = denormalize(mean_grid, mean_y1, std_y1)  \n",
     "\n",
     "\n",
     "mean_grid_rescaled = mean_grid_rescaled.reshape(x1_grid.shape)\n",
