--- a/SO_Numerical_Experiments/hypothesis_testing.ipynb
+++ b/SO_Numerical_Experiments/hypothesis_testing.ipynb
@@ -242,6 +242,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Batch  Maxima Difference  P-value\n",
+      "0      1           0.327006   0.0024\n",
+      "1      2           0.758296   0.0252\n",
+      "2      3           0.795956   0.0272\n",
+      "3      4           0.802673   0.0041\n",
+      "4      5           0.804356   0.0272\n",
+      "5      6           0.804449   0.0261\n",
+      "6      7           0.804468   0.0261\n",
+      "7      8           0.804468   0.0272\n",
+      "8      9           0.804467   0.0252\n",
+      "9     10           0.804467   0.0257\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = []\n",
+    "\n",
+    "for id2 in range(1, 11):\n",
+    "    perm_diffs, obs_diff_perm, p_value = permutation_test_max(id2=id2, id1=0, n_permutations=10000, df=full)\n",
+    "\n",
+    "    results.append({\n",
+    "        \"Batch\": id2,\n",
+    "        \"Maxima Difference\": obs_diff_perm,\n",
+    "        \"P-value\": p_value\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [
