--- a/SO_Numerical_Experiments/hypothesis_testing.ipynb
+++ b/SO_Numerical_Experiments/hypothesis_testing.ipynb
@@ -208,7 +208,7 @@
     "    obs_diff = np.max(X) - np.max(Y)\n",
     "    \n",
     "    perm_diffs = []\n",
-    "    for _ in range(n_permutations):\n",
+    "    for _ in range(n_permuttruations):\n",
     "        np.random.shuffle(combined)\n",
     "        X_permuted = combined[:n]\n",
     "        Y_permuted = combined[n:]\n",
