--- a/ARD_Experiments/ard_tests.ipynb
+++ b/ARD_Experiments/ard_tests.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lengthscales of the kernel:  [0.12474982 1.52406303]\n",
-      "[1.         0.08185345]\n"
+      "Lengthscales of the kernel:  [0.13341384 1.61925401]\n",
+      "[1.         0.08239216]\n"
      ]
     }
    ],
@@ -82,6 +82,47 @@
     "UPPER = 1\n",
     "\n",
     "optimizer = BayesianOptimization(fun=Hartmann(dim=DIM,negate=True), \n",
+    "                                 batch_size=BATCH_SIZE, \n",
+    "                                 dim=DIM, \n",
+    "                                 epochs=EPOCHS, \n",
+    "                                 n_init=N_INITIAL, \n",
+    "                                 lower_bound=LOWER,\n",
+    "                                 upper_bound=UPPER,\n",
+    "                                 seed=3,\n",
+    "                                 acqf_type='qUCB')\n",
+    "\n",
+    "x_max, y_max, lengthscales = optimizer.run()\n",
+    "data = optimizer.get_data()\n",
+    "full = optimizer.format(data, dim=DIM, n_init=N_INITIAL, batch_size=BATCH_SIZE, epochs=EPOCHS)\n",
+    "rel_ARD = np.zeros(DIM)\n",
+    "rel_ARD = rel_ARD + 1/lengthscales\n",
+    "rel_ARD_nor = rel_ARD/np.max(rel_ARD)\n",
+    "print(rel_ARD_nor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bayesian_optimization import BayesianOptimization\n",
+    "import pandas as pd \n",
+    "from botorch.test_functions import Ackley \n",
+    "from varstool import DVARS\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np \n",
+    "\n",
+    "# Variables that determine the size of the dataset\n",
+    "N_INITIAL = 50\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 5\n",
+    "DIM = 2\n",
+    "LOWER = -32.768\n",
+    "UPPER = 32.768\n",
+    "\n",
+    "optimizer = BayesianOptimization(fun=Ackley(dim=DIM,negate=True), \n",
     "                                 batch_size=BATCH_SIZE, \n",
     "                                 dim=DIM, \n",
     "                                 epochs=EPOCHS, \n",
